constructor injection, extract toResponse helper, use toList() in AccountService